:sparkles: project
update config and version